# SimularePlanete

./: CMakeLists.txt  GUI.cpp  GUI.h  Planet.cpp  Planet.h  Repository.cpp  Repository.h  RepositoryException.cpp  RepositoryException.h  Service.cpp  Service.h  Tests.cpp  Tests.h  date.txt  main.cpp  tests.txt
